--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: This is Rudiana 
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+remote_theme: chrisbobbe/jekyll-theme-prologue
 url: https://maliharudiana.github.io
 description: Welcome, you wanderer
