--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: This is Rudiana 
-remote_theme: chrisbobbe/jekyll-theme-prologue
+theme: jekyll-theme-cayman
 url: https://maliharudiana.github.io
 description: Welcome, you wanderer
